get recommeded movies via rest endpoint